--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-849.7KB/s(Youtube:不良林), server: 116.129.253.245, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: gz.bgp.rx.by.naiun.pw, port: 45324, type: ss, cipher: chacha20-ietf-poly1305, password: 3da74dd2-47ba-456e-a13d-83f8d1fb6fa7}
-  - {name: 🇨🇳 中国-640.3KB/s(Youtube:不良林), server: 43.154.17.136, port: 53811, type: vmess, uuid: 65dd0254-a25a-4476-8f95-ee358c40ebb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.46MB/s(Youtube:不良林), server: gz.bgp.rx.by.naiun.pw, port: 45194, type: vmess, uuid: 3da74dd2-47ba-456e-a13d-83f8d1fb6fa7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz.bgp.rx.by.naiun.pw}}
-  - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇸🇬 新加坡-207.6KB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
-  - {name: 🇨🇳 中国-974.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: 117.50.106.86, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-990.5KB/s(Youtube:不良林), server: 116.129.253.245, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇬🇧 英国-214.5KB/s(Youtube:不良林), server: 152.89.210.105, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.30MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-378.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇭🇰 香港-2.08MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.72MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 以色列-340.8KB/s(Youtube:不良林), server: 83.229.73.60, port: 50003, type: ss, cipher: aes-256-cfb, password: !<str> 8460400130}
+  - {name: 🇨🇳 台湾-3.42MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.92MB/s(Youtube:不良林), server: 43.154.56.122, port: 42475, type: vmess, uuid: 099e04a8-d591-4458-c5b6-9d53c8315672, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-214.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.72MB/s(Youtube:不良林)
+      - 以色列-340.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-214.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.72MB/s(Youtube:不良林)
+      - 以色列-340.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-214.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.72MB/s(Youtube:不良林)
+      - 以色列-340.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.72MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.42MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-214.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.72MB/s(Youtube:不良林)
+      - 以色列-340.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-214.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.72MB/s(Youtube:不良林)
+      - 以色列-340.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-214.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.72MB/s(Youtube:不良林)
+      - 以色列-340.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-849.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-207.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-974.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-990.5KB/s(Youtube:不良林)
       - 🇬🇧 英国-214.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.08MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.72MB/s(Youtube:不良林)
+      - 以色列-340.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
