--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.98MB/s(Youtube:不良林), server: 113.31.155.165, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-266.8KB/s(Youtube:不良林), server: 120.132.50.158, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.96MB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-723.4KB/s(Youtube:不良林), server: 43.154.17.136, port: 53811, type: vmess, uuid: 65dd0254-a25a-4476-8f95-ee358c40ebb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-603.4KB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.94MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-3.47MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.86MB/s(Youtube:不良林), server: 116.129.253.134, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.16MB/s(Youtube:不良林), server: 113.31.109.30, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-780.4KB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.04MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.92MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 38.68.134.71, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: 38.68.134.71, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 38.68.134.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-3.32MB/s(Youtube:不良林), server: 38.68.134.71, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-603.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-603.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-603.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-3.47MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-603.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-603.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-603.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-723.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-603.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-780.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.04MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
